@@ -1,3 +1,8 @@
+Fri Mar 21 11:44:08 1997  Samuel Tardieu  <sam@zaphod.enst.fr>
+
+	* Makefile.am: Make xe_defs.adb and sdefault.adb depend from the
+	  Makefile.
+
 Sat Mar  8 16:50:27 1997  Laurent Pautet  <pautet@inf.enst.fr>
 
 	* xe_lead.adb: Use Get_Rsh_Command to build shell script.
